# 2610DjangoViteStarter

./: README.md  pyproject.toml
_server/: .gitignore  manage.py
_server/_server/: asgi.py  settings.py  urls.py  wsgi.py
_server/core/: forms.py  middleware.py  models.py  urls.py  views.py
_server/core/migrations/: 0001_initial.py  0002_alter_location_campaign_and_more.py  0003_alter_location_hostility_and_more.py  0004_alter_location_neighboring_locations.py  0005_rename_clazz_character_class_field_and_more.py
_server/core/templates/campaigns/: campaign.html  edit.html  index.html  new.html
_server/core/templates/campaigns/characters/: character.html  edit.html  index.html  new.html
_server/core/templates/campaigns/events/: edit.html  event.html  index.html  new.html
_server/core/templates/campaigns/locations/: edit.html  index.html  location.html  new.html
_server/core/templates/campaigns/notes/: convert.html  edit.html  index.html  new.html  note.html
_server/core/templates/campaigns/organizations/: edit.html  index.html  new.html  (+1 more)
_server/core/templates/core/: index.html
_server/core/templates/users/: login.html  new.html  user.html
_server/core/views/: utils.py  views_characters.py  views_default.py  views_events.py  views_locations.py  views_notes.py  views_organizations.py  views_users.py
_server/registration/: urls.py  views.py
_server/registration/templates/registration/: base.html  sign_in.html  sign_up.html
client/: package-lock.json  package.json  vite.config.js
client/public/: style.css
client/src/: App.jsx  main.jsx
