[tool.poetry]
name = "dnd-tool"
version = "0.1.0"
description = ""
authors = ["Joseph Ditton <jditton.atomic@gmail.com>", "Toby Reid <toby.reid@usu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
